# Input-API

./: .gitignore  Commercial Use Policy  README.html  README.md  pyproject.toml
src/: debug.py
src/inputapi/: __init__.py  inputapi.py
src/inputapi/RDCs/: _RDCs.py  __init__.py
src/inputapi/boolean/: __init__.py  _boolean.py
src/inputapi/menus/: __init__.py
src/inputapi/menus/multiSelect/: __init__.py  returnDeselected.py
src/inputapi/menus/multiSelect/returnDeselected/: __init__.py  _returnDeselected.py
src/inputapi/menus/multiSelect/returnSelected/: __init__.py  _returnSelected.py
src/inputapi/menus/singleSelect/: __init__.py  _singleSelect.py
src/inputapi/menus/singleSelect/__pycache__/: _singleSelect.py
src/inputapi/numerical/: __init__.py
src/inputapi/numerical/float/: __init__.py  _float.py
src/inputapi/numerical/integer/: __init__.py  _integer.py
src/inputapi/numericals/: __init__.py
src/inputapi/numericals/float/: __init__.py
src/inputapi/numericals/integer/: __init__.py
src/inputapi/otherFunc/: __init__.py  clearScreen.py  pause.py
src/inputapi/otherFunc/clearScreen/: __init__.py  _clearScreen.py
src/inputapi/otherFunc/pause/: __init__.py  _pause.py
src/inputapi/strings/: __init__.py  _strings.py
