[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "inputapi"
version = "1.0.3"
authors = [
  { name="Nathan K", email="nathankjorlien@gmail.com" },
]
description = "A simpler way to get user input"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"