[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "inputapi"
version = "2.1.1"
authors = [
  { name = "Homer Haddock", email = "snakevs007NOTCLICKBAIT@gmail.com" },
]
description = "A simpler way to get user input"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "CC-BY-NC-SA-4.0"
urls = { github = 'https://github.com/TheRedBasic/Input-API' }