[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "inputapi"
version = "2.1.2"
authors = [
    { name = "Homer Haddock", email = "homerhaddock@proton.me" },
]
description = "A simpler way to get user input"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
license = { file = "LICENSE" }
urls = { github = 'https://github.com/HomerHaddock/Input-API' }
